# fast_multi_robot_exploration

./: .clang-format  .gitignore  README.md  clang-format-all  ignore_changes_tsp.sh
automatic_runs/: series_pcd_models.sh  single_run.sh
automatic_runs/evaluation/: evaluate_multiple_models.sh
swarm_exploration/active_perception/: CMakeLists.txt
swarm_exploration/active_perception/src/: frontier_finder.cpp  graph_node.cpp  uniform_grid.cpp
swarm_exploration/bspline_opt/: CMakeLists.txt
swarm_exploration/exploration_manager/: CMakeLists.txt
swarm_exploration/exploration_manager/config/: map_gen.rviz  swarm.rviz
swarm_exploration/exploration_manager/launch/: single_drone_exploration.xml  single_drone_planner_fame.xml  single_drone_planner_racer.xml  swarm_exploration.launch
swarm_exploration/exploration_manager/msg/: DroneState.msg  PairOpt.msg
swarm_exploration/exploration_manager/scripts/: plot_computation_times.py  plot_explored_volume.py  plot_ratios_comm_ranges.py  plot_series.py  plot_time_vs_team_size.py
swarm_exploration/exploration_manager/src/: collaboration_assigner.cpp  fame_exploration_fsm.cpp  fame_exploration_manager.cpp  fame_node.cpp  fast_exploration_fsm.cpp  fast_exploration_manager.cpp  role_assigner.cpp
swarm_exploration/exploration_manager/test/: collaboration_test.cpp
swarm_exploration/path_searching/src/: topo_prm.cpp
swarm_exploration/plan_env/: CMakeLists.txt  package.xml
swarm_exploration/plan_env/src/: edt_environment.cpp  map_ros.cpp  multi_map_manager.cpp  sdf_map.cpp
swarm_exploration/plan_env_msgs/: CMakeLists.txt  package.xml
swarm_exploration/plan_manage/: CMakeLists.txt
swarm_exploration/plan_manage/src/: kino_replan_fsm.cpp  planner_manager.cpp  send_cmd.cpp  traj_server.cpp
swarm_exploration/traj_utils/: CMakeLists.txt
uav_simulator/Utils/logging_utils/: CMakeLists.txt  package.xml
uav_simulator/Utils/logging_utils/include/logging_utils/: logger.h
uav_simulator/Utils/logging_utils/launch/: logging_node.launch  trigger_node.launch
uav_simulator/Utils/logging_utils/src/: logger.cpp  logging_node.cpp  trigger_node.cpp
uav_simulator/local_sensing/: CMakeLists.txt
uav_simulator/map_generator/: CMakeLists.txt
(+314 files in other folders)
